--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div class="hero"></div>
 
     <main>
-      <div class="search-engine-optimization">
+      <div 
+      id="search-engine-optimization"
+      class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
